# smart-portfolio-core

./: Ejemplo_Yfinance.ipynb  LICENSE  main.py  portafolio.json  pyproject.toml  yfinance_data.py
src/: cli.py  interfaces.py  json_storage.py  modelos.py  portafolio.py  reportes.py  visualizacion.py
tests/: conftest.py  mock_data_provider.py  test_models.py  test_portafolio.py  test_reportes.py
