[tool.poetry]
name = "smart-portfolio-core"
version = "0.1.0"
description = "Proyecto Integrador SmartPortfolio"
authors = ["Oliver <oliverbeltran44@gmail.com>"]

packages = [
    { include = "smart-portfolio-core" }
]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.5"
pandas = "^3.0.0"
