[tool.poetry]
name = "smart-portfolio-core"
version = "0.1.0"
description = "Proyecto Integrador SmartPortfolio"
authors = ["Oliver Beltrán"]

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.5"
pandas = "^3.0.0"
pydantic = "^2.12.5"
yfinance = "^0.2.54"
scikit-learn = "^1.8.0"
matplotlib = "^3.8.0"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

